js/js.translator/testData/incremental/invalidation/fakeOverrideClassFunctionQualifiers/lib1/l1.5.kt
open class Module2OpenClass {
    public fun testFunction2() = 20
    public fun testFunction22() = 220

    public val testField222: Int
        get() = 2220
}
